--- a/data-science.html
+++ b/data-science.html
@@ -22,23 +22,38 @@
                 </header>
                 <section class="posts">
                     <article>
-                        <header><h2><a href="#">ML Project Title</a></h2></header>
-                        <a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-                        <p>Detailed description of your data science project, tools used (Python, Scikit-learn), and results.</p>
+                        <header><h2><a href="#">International Breweries Sales And Market Performance Analysis With Python</a></h2></header>
+                        <a href="#" class="image fit"><img src="images/brewery.png" alt="" /></a>
+                        <p>Developed an International Breweries Sales Analysis system using Python, 
+                            processing three years of multi-national retail data. Engineered a data pipeline
+                             to analyze profitability across diverse brands and territories, resulting in 
+                             the identification of key market drivers in Anglophone and Francophone regions. 
+                             Delivered actionable visualizations that pinpointed underperforming SKUs and peak 
+                             sales cycles to support strategic marketing decisions.</p>
                         <ul class="actions special">
-                            <li><a href="#" class="button">View Report</a></li>
-                            <li><a href="#" class="button primary">View Code</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/International-Breweries-Sales-Performance-Market-Analysis/blob/main/README.md" class="button">View Report</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/International-Breweries-Sales-Performance-Market-Analysis/blob/main/International%20Breweries%20Sales%20Analysis.ipynb" class="button primary">View Code</a></li>
                         </ul>
                     </article>
                     <article>
-                        <header><h2><a href="#">ML Project Title</a></h2></header>
-                        <a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-                        <p>Detailed description of your data science project, tools used (Python, Scikit-learn), and results.</p>
+                        <header><h2><a href="#">Manpower/Labour Performance Dashboard</a></h2></header>
+                        <a href="#" class="image fit"><img src="images/labour_dashboard.png" alt="" /></a>
+                        <p>Developed comprehensive workforce analytics solution to track and optimize labor 
+                            productivity across operations. Built interactive Power BI dashboard analyzing 
+                            key performance metrics including manpower utilization rates, productivity trends,
+                             labor cost efficiency, and workforce allocation. Enabled data-driven decision-making
+                              for resource planning and operational efficiency improvements through real-time 
+                              performance monitoring and predictive insights. Delivered actionable intelligence
+                               that reduced labor costs while improving productivity benchmarks.</p>
                         <ul class="actions special">
-                            <li><a href="#" class="button">View Report</a></li>
-                            <li><a href="#" class="button primary">View Code</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/Manpower-Labour-Performance-Analysis/blob/main/Manpower_Performance_Dashboard_Report.pdf" class="button">View Report</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/Manpower-Labour-Performance-Analysis/blob/main/Manpower%20Performance%20Dashboard.pdf" class="button primary">View Dashboard</a></li>
                         </ul>
                     </article>
+
+                    
+
+
                 </section>
             </div>
         </div>
