--- a/web-maps.html
+++ b/web-maps.html
@@ -22,12 +22,18 @@
                 </header>
                 <section class="posts">
                     <article>
-                        <header><h2><a href="#">Web Map Title</a></h2></header>
-                        <a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-                        <p>Built with Leaflet.js, Folium, or Mapbox. Explain the interactivity.</p>
+                        <header><h2><a href="#">Real Estate Parcel Value And InformationLive WebMap</a></h2></header>
+                        <a href="#" class="image fit"><img src="images/Web_map.png" alt="" /></a>
+                        <p>This web application provides an intuitive interface for browsing real estate 
+                            properties on an interactive map. Users can explore properties, view detailed 
+                            information, and interact with geographic data through a modern web interface. 
+                            The system integrates with external real estate APIs to fetch and display up-to-date
+                             property listings.The WebApplication is built using Python Django and Leaflet, 
+                             with a PostgreSQL database backend. The frontend is built using HTML, CSS, and 
+                             JavaScript.</p>
                         <ul class="actions special">
-                            <li><a href="#" class="button">View Live Map</a></li>
-                            <li><a href="#" class="button primary">View Code</a></li>
+                            <li><a href="https://nimginsb.pythonanywhere.com/" class="button">View Live Map</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/Real-Estate-Web-Map/blob/main/README.md" class="button primary">View Report</a></li>
                         </ul>
                     </article>
                 </section>
