--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             <div id="intro">
                 <h1>Nwachukwu<br />Pascal Okaro</h1>
-                <p>Data Analyst| GIS Analyst |Data Scientist & Machine Learning Engineer </p>
+                <p>Data Analyst| GIS Analyst |Data Engineer </p>
                 <p>Solving complex data and spatial problems through code and intelligence.</p>
                 <ul class="actions">
                     <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
