--- a/data-science.html
+++ b/data-science.html
@@ -21,6 +21,75 @@
                     <p>Predictive modeling, statistical analysis, and automated insights.</p>
                 </header>
                 <section class="posts">
+
+                      <article>
+                        <header><h2><a href="#">End-to-End Catastrophe Insurance Risk Data Engineering With Snowflake & PowerBI</a></h2></header>
+                        <a href="#" class="image fit"><img src="images/flood_risk.png" alt="Flood_risk" /></a>
+                        <p>Designed and delivered a full-stack catastrophe risk analytics pipeline simulating 
+                            £10.79bn in Total Insured Value across 10,000 UK properties. Built a scalable Snowflake
+                             data warehouse using Medallion Architecture (Raw → Analytics), leveraging Spatial 
+                             SQL (Point-in-Polygon) to identify flood zone exposure within Thames high-risk boundaries.
+                             Engineered a secure, enterprise-grade RBAC framework following the Principle of Least 
+                             Privilege, enabling controlled BI access while maintaining delegated administrative governance.
+                             Connected Power BI via DirectQuery for real-time analytics and developed advanced DAX 
+                             measures to calculate Loss Exposure %, Risk Concentration, and segment-level exposure 
+                             insights. Designed an executive-ready dashboard highlighting £1.07bn in flood-exposed 
+                             value (9.95% of portfolio), enabling rapid underwriting decisions.</p>
+                        <ul class="actions special">
+                            <li><a href="https://github.com/nwachukwu-okaro/End-to-End-Catastrophe-Risk-Data-Engineering-With-Snowflakes-PowereBI/blob/main/Queries" class="button">View Queries</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/End-to-End-Catastrophe-Risk-Data-Engineering-With-Snowflakes-PowereBI" class="button">View Report</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/End-to-End-Catastrophe-Risk-Data-Engineering-With-Snowflakes-PowereBI/blob/main/Flood_risk.pdf" class="button primary">View Dashboard</a></li>
+                        </ul>
+                    </article>
+
+
+                         <article>
+                        <header><h2><a href="#">ESG Ratings Web Scraping With Python Selenium</a></h2></header>
+                        <a href="#" class="image fit"><img src="images/ESG_Rating.png" alt="ESG" /></a>
+                        <p>Engineered an automated ESG intelligence pipeline using Python and Selenium to extract 
+                            sustainability ratings from Sustainalytics, Refinitiv, and S&P Global. Implemented dynamic
+                             web interaction, cookie handling, XPATH-based element targeting, and structured data 
+                             consolidation into a unified ESG benchmarking dataset. Delivered a repeatable multi-source
+                              data acquisition framework that enables cross-provider ESG comparison and supports 
+                              investment-grade sustainability analysis.</p>
+                        <ul class="actions special">
+                            <li><a href="https://github.com/nwachukwu-okaro/ESG_Ratings" class="button">View Report</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/ESG_Ratings/blob/main/ESG_Ratings_From_webpages.ipynb" class="button primary">View Code</a></li>
+                        </ul>
+                    </article>
+
+
+                    <article>
+                        <header><h2><a href="#">Sales and Production Performance Power Bi Dashboard</a></h2></header>
+                        <a href="#" class="image fit"><img src="images/Sales_dashboard.png" alt="Sale%20and%20Production%20Dashboard" /></a>
+                        <p>This Power BI report provides an integrated, decision-focused view of an organisation’s financial 
+                            performance, sales operations, and production efficiency. 
+                            By combining historical comparisons, time-based trends, and variance analysis, the report enables 
+                            leadership to quickly identify revenue decline, sales volatility, and cost inefficiencies.</p>
+                        <ul class="actions special">
+                            <li><a href="https://github.com/nwachukwu-okaro/Sale-and-Production-Performance-Dashboard/blob/main/Sales%20and%20Production%20Executive%20Report.pdf" class="button">View Report</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/Sale-and-Production-Performance-Dashboard/blob/main/Sale%20and%20Production%20Dashboard.pdf" class="button primary">View Dashboard</a></li>
+                        </ul>
+                    </article>
+
+
+                    <article>
+                        <header><h2><a href="#">DVD Rental Business Intelligence & Customer Analytics With PostgreSQL</a></h2></header>
+                        <a href="#" class="image fit"><img src="images/PostgresSQL.png" alt="DVD" /></a>
+                        <p>Developed a full-scale SQL business intelligence model analyzing a multi-table DVD
+                             rental database to uncover customer spending behavior, revenue concentration, rental
+                              frequency cohorts, and geographic revenue distribution. Applied advanced joins, 
+                              CTE-driven segmentation logic, time-series analysis, and contribution modeling to 
+                              identify high-value customers, peak rental periods, and profit-driving categories. 
+                              Delivered data-driven insights that support revenue optimization, customer targeting, 
+                              and operational efficiency.</p>
+                        <ul class="actions special">
+                            <li><a href="https://github.com/nwachukwu-okaro/DVD-Rental-Business-Intelligence-Customer-Analytics-SQL-Project-" class="button">View Report</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/DVD-Rental-Business-Intelligence-Customer-Analytics-SQL-Project-/blob/main/Movie_Rental_Analysis.sql" class="button primary">View Queries</a></li>
+                        </ul>
+                    </article>
+
+
                     <article>
                         <header><h2><a href="#">International Breweries Sales And Market Performance Analysis With Python</a></h2></header>
                         <a href="#" class="image fit"><img src="images/brewery.png" alt="" /></a>
@@ -51,7 +120,84 @@
                         </ul>
                     </article>
 
+                    <article>
+                        <header><h2><a href="#">Charity Database Analysis with PostgreSQL</a></h2></header>
+                        <a href="" class="image fit"><img src="images/charity_SQL.png" alt="Charity_Donation" /></a>
+                        <p>This project analyzed a charity’s donor and donation datasets to uncover donation patterns, 
+							donor behavior, and revenue drivers.I combined donor demographics with transaction data
+							 to evaluate donor engagement, identify high-value contributors, and highlight gaps between pledged 
+							 and actual donations.Key Functions utilized include JOINs, GROUP BYs, AGGREGATE FUNCTIONs, FILTERINGs,
+							  SUBQUERIEs, and CASE statements.</p>
+                        <ul class="actions special">
+                            <li><a href="https://github.com/nwachukwu-okaro/Charity_Donations/blob/main/README.md" class="button">View Report</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/Charity_Donations/blob/main/Charity_Donation.sql" class="button primary">View Code</a></li>
+                        </ul>
+                    </article>
+
+                    <article>
+                        <header><h2><a href="#">Labour Cost Control Power Bi Dashboard </a></h2></header>
+                        <a href="#" class="image fit"><img src="images/Cost_KPI.png" alt="Labour%20Cost%20Dashboard" /></a>
+                        <p>This Power BI dashboard provides an end-to-end view of project financial health, labor cost progression,
+                             and procurement transparency. It integrates completion metrics, budget forecasts, weekly cost burn-up
+                              trends, and granular AP/PO transaction data. The report enables executives to monitor budget adherence,
+                               margin performance, and cash exposure in near real time, while supporting drill-down analysis for 
+                               governance and audit purposes.</p>
+                        <ul class="actions special">
+                            <li><a href="https://github.com/nwachukwu-okaro/Labor-Manpower-Cost-Control-Dashboard-/blob/main/Labour%20Cost_Dashboard_Report.pdf" class="button">View Report</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/Labor-Manpower-Cost-Control-Dashboard-/blob/main/Labour%20Cost%20Dashboard.pdf" class="button primary">View Code</a></li>
+                        </ul>
+                    </article>
+
+                        <article>
+                        <header><h2><a href="#"> Insurance Customer Personality Analysis for  Product Recommendation</a></h2></header>
+                        <a href="#" class="image fit"><img src="images/Product_recommendation.png" alt="Customer-Personality-Analysis-for-Product-Recommendation" /></a>
+                        <p>This project analyzed customer data to identify distinct customer segments based on personality traits and behavioral patterns. 
+							By applying clustering techniques in Python, the analysis revealed four distinct customer personas that are valuable for 
+							personalized insurance product recommendations. The insights from this project support targeted marketing strategies and 
+							enhanced customer engagement by aligning insurance offerings with specific customer characteristics.</p>
+                        <ul class="actions special">
+                            <li><a href="https://github.com/nwachukwu-okaro/Customer-Personality-Analysis-for-Product-Recommendation/blob/main/README.md" class="button">View Report</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/Customer-Personality-Analysis-for-Product-Recommendation/blob/main/Insurance%20Product%20Recommendation.ipynb" class="button primary">View Code</a></li>
+                        </ul>
+                    </article>
+
+
+                     <article>
+                        <header><h2><a href="#">Sales Profitability & Regional Performance Analysis With SQL</a></h2></header>
+                        <a href="#" class="image fit"><img src="images/PostgresSQL.png" alt="Sales" /></a>
+                        <p>Developed a SQL-driven financial intelligence model analyzing 2011–2016 sales data to
+                             uncover quarterly, annual, and regional profitability trends. Applied date transformation,
+                              CTE-based time-series modeling, profit calculation logic, and subquery benchmarking 
+                              to identify high-performing quarters and top- and low-performing countries. Delivered
+                               actionable insights that support revenue optimization, seasonal strategy planning, 
+                               and geographic expansion decisions.</p>
+                        <ul class="actions special">
+                            <li><a href="https://github.com/nwachukwu-okaro/Sales-Profitability-Regional-Performance-Analysis" class="button">View Report</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/Sales-Profitability-Regional-Performance-Analysis/blob/main/Sales_Profitability_Analysis.sql" class="button primary">View Queries</a></li>
+                        </ul>
+                    </article>
+
                     
+
+                    <article>
+                        <header><h2><a href="#">Insurance Claim Fraud Detection</a></h2></header>
+                        <a href="#" class="image fit"><img src="images/Fraud_Detection.png" alt="Insurance%20Fraud%20Machine%20Learning" /></a>
+                        <p>This project focused on detecting fraudulent insurance claims using supervised machine learning
+							 techniques in Python. Historical claims data was explored, cleaned, and transformed to identify
+							  patterns associated with fraudulent behaviour. Multiple classification models were trained and 
+							  evaluated to assess their effectiveness in distinguishing between legitimate and fraudulent claims.
+							  The models tested included Logistic Regression, Decision Tree, and Random Forest classifiers.
+							   Model performance was compared using metrics such as accuracy, precision, recall, and F1-score, 
+							   with particular emphasis on recall to minimise missed fraud cases. 
+							   The project demonstrates an end-to-end fraud analytics workflow, 
+							   from exploratory data analysis and feature preparation to model evaluation and business-oriented 
+							   insights..</p>
+                        <ul class="actions special">
+                            <li><a href="https://github.com/nwachukwu-okaro/Insurance-Fraud-Detection/blob/main/README.md" class="button">View Report</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/Insurance-Fraud-Detection/blob/main/Insurance%20Fraud%20Machine%20Learning.ipynb" class="button primary">View Code</a></li>
+                        </ul>
+                    </article>
+
 
 
                 </section>
