--- a/geospatial.html
+++ b/geospatial.html
@@ -21,6 +21,19 @@
                     <p>Spatial statistics, Remote Sensing, and Cartographic Design.</p>
                 </header>
                 <section class="posts">
+
+                    <article>
+                        <header><h2><a href="#">Public Transport Accessibility Analysis – Lancashire County Council with ArcGIS</a></h2></header>
+                        <a href="#" class="image fit"><img src="images/Lancashire.png" alt="Lancashire" /></a>
+                        <p>This project analyses public transport accessibility across Lancashire County Council by evaluating 
+                            the proportion of the population living within 400 metres of an active public transport stop.The analysis integrates spatial accessibility modelling with socio-demographic indicators (IMD and population structure) to identify areas with good, moderate, or poor access to public transport services..</p>
+                        <ul class="actions special">
+                            <li><a href="https://github.com/nwachukwu-okaro/Public-Transport-Accessibility-Analysis-Lancashire-County-Council-400m-Buffer-" class="button">View Report</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/Public-Transport-Accessibility-Analysis-Lancashire-County-Council-400m-Buffer-/blob/main/Layout.pdf" class="button primary">View Layout</a></li>
+                        </ul>
+                    </article>
+
+
                     <article>
                         <header><h2><a href="#">Visualization of Total Petroleum Hydrocarbon (TPH)
                             Contamination Across A Refinery Site With QGIS</a></h2></header>
@@ -58,6 +71,38 @@
                     </article>
 
 
+
+                    <article>
+                        <header><h2><a href="#">Global Seismic Impact Analysis of the 10 Deadliest Earthquakes  Between 2000-2022</a></h2></header>
+                        <a href="#" class="image fit"><img src="images/earthquake.png" alt="Lancashire" /></a>
+                        <p>Authored a Global Seismic Risk Analysis using ArcGIS Pro, mapping the 10 deadliest 
+                            earthquakes from 2000–2022. Developed a multi-layered visualization integrating 
+                            tectonic fault lines with proportional death-toll symbology. Successfully communicated
+                             complex humanitarian data by synthesizing raw USGS datasets into a high-impact cartographic
+                              layout for disaster management stakeholders.</p>
+                        <ul class="actions special">
+                            <li><a href="https://github.com/nwachukwu-okaro/Global-Seismic-Impact-Analysis-of-the-10-Deadliest-Earthquakes-2000-2022-" class="button">View Report</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/Global-Seismic-Impact-Analysis-of-the-10-Deadliest-Earthquakes-2000-2022-/blob/main/Layout1.pdf" class="button primary">View Layout</a></li>
+                        </ul>
+                    </article>
+
+
+
+                    <article>
+                        <header><h2><a href="#">Sea Level Rise Impact Analysis for German Coastal Regions using QGIS</a></h2></header>
+                        <a href="#" class="image fit"><img src="images/4M_Stimulation.png" alt="Sea-Level-Rise-Impact-Analysis-for-German-Coastal-Regions" /></a>
+                        <p>This project analyses the potential impact of sea level rise (SLR) on Germany’s coastal regions and
+                            islands, focusing on simulated scenarios of 2 m and 4 m sea level rise.
+                            The objective is to identify low-lying land areas that would become inundated, calculate the total 
+                            land area affected, and present the results in a way that supports risk assessment, spatial planning, 
+                            and climate adaptation strategies..</p>
+                        <ul class="actions special">
+                            <li><a href="https://github.com/nwachukwu-okaro/Sea-Level-Rise-Impact-Analysis-for-German-Coastal-Regions/tree/main" class="button">View Report</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/Sea-Level-Rise-Impact-Analysis-for-German-Coastal-Regions/blob/main/2M_SLR_Printlayout.pdf" class="button primary">View Layout</a></li>
+                        </ul>
+                    </article>
+
+
                     <article>
                         <header><h2><a href="#">UK Renewable Energy Infrastructure Mapping With ArcGIS</a></h2></header>
                         <a href="#" class="image fit"><img src="images/UK_renewable.png" alt="" /></a>
@@ -90,6 +135,25 @@
                         <ul class="actions special">
                             <li><a href="https://github.com/nwachukwu-okaro/Spatial-Analysis-of-Property-Value-Distribution-in-Leeds" class="button">View Report</a></li>
                             <li><a href="https://github.com/nwachukwu-okaro/Spatial-Analysis-of-Property-Value-Distribution-in-Leeds/blob/main/Leeds%20Property%20Aggregated%20Mean%20Price.pdf" class="button primary">View Map</a></li>
+                        </ul>
+                    </article>
+
+
+                    <article>
+                        <header><h2><a href="#">Marketing Campaign Analysis Targetting Neighbourhoods Within 5Mile Radius Of A Point</a></h2></header>
+                        <a href="#" class="image fit"><img src="images/marketing_5miles.png" alt="marketing" /></a>
+                        <p>Conducted a subdivision-level spatial analysis to identify and map all residential 
+                            neighborhoods within a 5-mile radius of the I-71 & KY-393 interchange in Buckner, KY.Integrated 
+                            fragmented public datasets, standardized subdivision names, and resolved data gaps through
+                             targeted geocoding and spatial validation. Generated a clean, decision-ready dataset 
+                             containing Map IDs, neighborhood names, and representative latitude/longitude coordinates.
+                             Applied buffer analysis, proximity selection, geocoding, and attribute enhancement in 
+                             ArcGIS Pro, followed by professional cartographic layout design for both digital and 
+                             print deliverables. Packaged the project to ensure reproducibility and eliminate layer
+                              path errors.</p>
+                        <ul class="actions special">
+                            <li><a href="https://github.com/nwachukwu-okaro/Marketing-Campaign-Analysis-Targetting-Neighbourhoods-Within-5-Mile-Radius-Of-A-Point" class="button">View Report</a></li>
+                            <li><a href="https://github.com/nwachukwu-okaro/Marketing-Campaign-Analysis-Targetting-Neighbourhoods-Within-5-Mile-Radius-Of-A-Point/blob/main/Layout.pdf" class="button primary">View Layout</a></li>
                         </ul>
                     </article>
 
