--- a/data-science.html
+++ b/data-science.html
@@ -23,7 +23,7 @@
                 <section class="posts">
 
                       <article>
-                        <header><h2><a href="#">End-to-End Catastrophe Insurance Risk Data Engineering With Snowflake & PowerBI</a></h2></header>
+                        <header><h2><a href="#">Thames London Properties Flood Risk Exposure and Insurance Claims Data Architecture Design With Snowflake & PowerBI</a></h2></header>
                         <a href="#" class="image fit"><img src="images/flood_risk.png" alt="Flood_risk" /></a>
                         <p>Designed and delivered a full-stack catastrophe risk analytics pipeline simulating 
                             £10.79bn in Total Insured Value across 10,000 UK properties. Built a scalable Snowflake
